feat: create and delete user
