# backend/internal/modules/user/controller/implement.go
@@ -32,8 +32,7 @@ func NewUserController(service service.UserServicer, readResponder rr.ReadRespon
 // @Failure 400,404 {object} rr.JSONResponse
 // @Router /user/{username} [get]
 func (c *UserControl) GetByUsername(w http.ResponseWriter, r *http.Request) {
-	parts := strings.Split(r.URL.Path, "/")
-	username := parts[len(parts)-1]
+	username := usernameFromPath(r.URL.Path)
 
 	if username == "" {
 		_ = c.rr.WriteJSONError(w, errors.New("invalid username"))
@@ -62,8 +61,7 @@ func (c *UserControl) GetByUsername(w http.ResponseWriter, r *http.Request) {
 // @Failure 400,404 {object} rr.JSONResponse
 // @Router /user/{username} [put]
 func (c *UserControl) Update(w http.ResponseWriter, r *http.Request) {
-	parts := strings.Split(r.URL.Path, "/")
-	username := parts[len(parts)-1]
+	username := usernameFromPath(r.URL.Path)
 
 	if username == "" {
 		_ = c.rr.WriteJSONError(w, errors.New("invalid username"))
@@ -96,9 +94,59 @@ func (c *UserControl) Update(w http.ResponseWriter, r *http.Request) {
 
 }
 
+// Create godoc
+// @Summary create user
+// @Description Create user
+// @Tags user
+// @Accept json
+// @Produce json
+// @Param body body entities.User true "User object"
+// @Success 201 {object} rr.JSONResponse
+// @Failure 400 {object} rr.JSONResponse
+// @Router /user [post]
+func (c *UserControl) Create(w http.ResponseWriter, r *http.Request) {
+	var user entities.User
+	_ = c.rr.ReadJSON(w, r, &user)
+
+	if err := c.service.CreateUser(r.Context(), user); err != nil {
+		_ = c.rr.WriteJSONError(w, e.Wrap("couldn't create user", err))
+		return
+	}
+
+	resp := rr.JSONResponse{Error: false, Message: "user created"}
+	_ = c.rr.WriteJSON(w, 201, resp)
+}
+
+// Delete godoc
+// @Summary delete user
+// @Description Delete user
+// @Tags user
+// @Produce json
+// @Param username path string true "The name that needs to be deleted"
+// @Success 200 {object} rr.JSONResponse
+// @Failure 400,404 {object} rr.JSONResponse
+// @Router /user/{username} [delete]
 func (c *UserControl) Delete(w http.ResponseWriter, r *http.Request) {
-	//TODO implement me
-	panic("implement me")
+	username := usernameFromPath(r.URL.Path)
+	ctx := r.Context()
+
+	if username == "" {
+		_ = c.rr.WriteJSONError(w, errors.New("invalid username"))
+		return
+	}
+
+	if _, err := c.service.GetUserByName(ctx, username); err != nil {
+		_ = c.rr.WriteJSONError(w, e.Wrap("couldn't get user", err), 404)
+		return
+	}
+
+	if err := c.service.DeleteUser(ctx, username); err != nil {
+		_ = c.rr.WriteJSONError(w, e.Wrap("couldn't delete user", err))
+		return
+	}
+
+	resp := rr.JSONResponse{Error: false, Message: "user deleted"}
+	_ = c.rr.WriteJSON(w, 200, resp)
 }
 
 func (c *UserControl) Login(w http.ResponseWriter, r *http.Request) {
@@ -111,12 +159,12 @@ func (c *UserControl) Logout(w http.ResponseWriter, r *http.Request) {
 	panic("implement me")
 }
 
-func (c *UserControl) Create(w http.ResponseWriter, r *http.Request) {
+func (c *UserControl) CreateWithArray(w http.ResponseWriter, r *http.Request) {
 	//TODO implement me
 	panic("implement me")
 }
 
-func (c *UserControl) CreateWithArray(w http.ResponseWriter, r *http.Request) {
-	//TODO implement me
-	panic("implement me")
+func usernameFromPath(path string) string {
+	parts := strings.Split(path, "/")
+	return parts[len(parts)-1]
 }
